Add Firebase debugging tools and recommendation helper functions; update HTML to include new scripts.

--- a/index.html
+++ b/index.html
@@ -262,7 +262,11 @@
     <!-- Firebase Configuration -->
     <script src="firebase-config.js"></script>
     
+    <!-- Helper Scripts -->
+    <script src="recommendation-helper.js?v=1.0.0"></script>
+    <script src="firebase-debug.js?v=1.0.0"></script>
+    
     <!-- Main App Script -->
-    <script src="script.js?v=1.0.1"></script>
+    <script src="script.js?v=1.0.2"></script>
 </body>
 </html>
