Add sign out button to the navigation, implement sign out functionality in script, and style the button in CSS.

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
             <nav>
                 <button id="add-partner-btn"><i class="fas fa-plus"></i> Add Partner</button>
                 <button id="settings-btn"><i class="fas fa-cog"></i></button>
+                <button id="sign-out-btn"><i class="fas fa-sign-out-alt"></i></button>
                 <div id="theme-toggle" class="theme-toggle" title="Toggle dark mode"></div>
             </nav>
         </header>
