Revise hero section and feature cards in index.html to enhance messaging for PMS GPS. Update headings, descriptions, and button text to better convey the benefits of understanding women's cycles in relationships. Improve overall engagement with more compelling language and visuals.

--- a/index.html
+++ b/index.html
@@ -391,10 +391,10 @@
     <main class="welcome-main">
         <section class="hero-section">
             <div class="hero-text">
-                <h1>Stop Playing Emotional Roulette</h1>
-                <p class="tagline">Her mood swings don't have to be a mystery. Track her cycle and finally understand why that text was left on read.</p>
+                <h1>Men Who Know, Win.</h1>
+                <p class="tagline">Ever wonder why some guys effortlessly navigate dating, hookups, and relationships, while others stumble around cluelessly? Science says: women's cycles dramatically influence attraction, mood, and desire. If you're not using PMS GPS, you're playing blindfolded—and losing.</p>
                 <button id="try-now-btn" class="try-now-btn">
-                    <span>Get Started</span>
+                    <span>Stop Being Clueless. Get PMS GPS. 🚀</span>
                     <i class="fas fa-arrow-right"></i>
                 </button>
             </div>
@@ -434,33 +434,33 @@
         </section>
 
         <section class="features-section">
-            <h2>Why You Need PMS GPS</h2>
+            <h2>Why Smart Men Use PMS GPS</h2>
             <div class="features-grid">
                 <div class="feature-card">
-                    <i class="fas fa-venus"></i>
-                    <h3>Perfect Timing</h3>
-                    <p>Know exactly when that time of month is coming so you can plan accordingly or adjust your schedule</p>
+                    <i class="fas fa-bullseye"></i>
+                    <h3>Peak Chemistry, Perfect Timing</h3>
+                    <p>Research shows women's interest in intimacy, flirting, and adventure peaks around ovulation. Track her cycle, unlock better hookups, hotter dates, and fewer mixed signals.</p>
                 </div>
                 <div class="feature-card">
-                    <i class="fas fa-heart"></i>
-                    <h3>Relationship Insights</h3>
-                    <p>From casual dates to work friends, customize your approach for each type of relationship in your life</p>
+                    <i class="fas fa-brain"></i>
+                    <h3>Know When to Chill</h3>
+                    <p>Sensitivity and mood swings can increase during PMS. Avoid unnecessary arguments and drama—know exactly when to give her space or show extra support.</p>
                 </div>
                 <div class="feature-card">
-                    <i class="fas fa-gift"></i>
-                    <h3>Thoughtful Suggestions</h3>
-                    <p>Smart recommendations for when to send that text, surprise her with a treat, or just give some space</p>
+                    <i class="fas fa-bolt"></i>
+                    <h3>Instantly Improve Your Game</h3>
+                    <p>Studies confirm men aware of their partner's cycles have stronger, more passionate connections. Knowing the cycle is your secret weapon—use it.</p>
                 </div>
                 <div class="feature-card">
                     <i class="fas fa-shield-alt"></i>
-                    <h3>Stealth Mode</h3>
-                    <p>Your relationships are protected with PIN security. Some things are better kept private</p>
+                    <h3>Bulletproof Privacy</h3>
+                    <p>Secure login protection and discreet notifications ensure your strategic advantage remains your secret.</p>
                 </div>
             </div>
         </section>
 
         <section class="screenshots-section">
-            <h2>The Smart Guide to Better Relationships</h2>
+            <h2>🔥 PMS GPS Features</h2>
             <div class="screenshots-carousel">
                 <div class="phone-frame">
                     <div class="phone-screen">
@@ -546,9 +546,9 @@
 
         <section class="signup-section">
             <div class="signup-content">
-                <h2>Be Prepared, Not Surprised</h2>
-                <p>Everyone wonders if "it's just that time of month," but you can actually know for sure</p>
-                <button id="signup-btn" class="signup-btn">Get Started Now</button>
+                <h2>⚠️ Real Talk: Don't Be the Last to Know</h2>
+                <p>Every guy who understands her cycle has an unfair advantage. Do you really want to be the clueless one?</p>
+                <button id="signup-btn" class="signup-btn">Get PMS GPS and Win 🏆</button>
             </div>
         </section>
     </main>
